samples/_failures_safe/1761438623_398ca2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4602cfd6.c: In function ‘main’:
./samples/SAFE/__tmp_4602cfd6.c:148:5: error: ‘uint8’ undeclared (first use in this function); did you mean ‘uint8_t’?
  148 |     uint8
      |     ^~~~~
      |     uint8_t
./samples/SAFE/__tmp_4602cfd6.c:148:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4602cfd6.c:148:10: error: expected ‘;’ at end of input
  148 |     uint8
      |          ^
      |          ;
./samples/SAFE/__tmp_4602cfd6.c:148:5: error: expected declaration or statement at end of input
  148 |     uint8
      |     ^~~~~
